--- a/baseproyectos.html
+++ b/baseproyectos.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="utf-8">
-    <title>Magic Ball 8</title>
+    <title>XXXXXXXXXXXXXXX</title>
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="description" content="Personal Landing Page">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=5.0">
@@ -17,12 +17,12 @@
     <link rel="stylesheet" href="../css/style.css">
     <meta property="og:locale" content="es_MX">
     <meta property="og:type" content="website">
-    <meta property="og:title" content="Magic Ball 8 - David Adrián Ochoa">
-    <meta property="og:description" content="Magic Ball 8 - Projects.">
-    <meta property="og:url" content="https://pag2personaltests.netlify.app/projects/mb8">
+    <meta property="og:title" content="Best Pizzas - David Adrián Ochoa">
+    <meta property="og:description" content="Best Pizzas - Projects.">
+    <meta property="og:url" content="https://pag2personaltests.netlify.app/projects/pizza">
     <meta property="og:site_name" content="David Adrián Ochoa">
     <meta property="og:image"
-        content="https://github.com/DavidAdrian8ag/testpagpersonal2/blob/main/img/portfolio/MagicBall8.png?raw=true">
+        content="https://github.com/DavidAdrian8ag/testpagpersonal2/blob/main/img/portfolio/pizza.jpg?raw=true">
     <meta name="twitter:card" content="summary_large_image">
     <script src="https://code.iconify.design/iconify-icon/1.0.7/iconify-icon.min.js"></script>
 </head>
@@ -48,8 +48,8 @@
                         <div class="row">
                             <div class="col-xs-12 col-md-offset-1 col-md-10 col-lg-offset-2 col-lg-8 padbb">
                                 <div class="page-title text-center">
-                                    <h2 class="centrado"><span class="primary">Magic</span>Ball 8 <span
-                                            class="title-bgproy2">this Project</span></h2>
+                                    <h2 class="centrado">XXXXXXXXXXXXXXX <span class="primary">XXXXXXXXXXXXXXX</span> <span
+                                        class="title-bg title-bgproy1 title-bgproy2">this Project</span></h2>  <!--= Ojo con el background -->
                                 </div>
                             </div>
                         </div>
@@ -65,11 +65,22 @@
                     <div class="col-xs-12 col-lg-offset-2 col-lg-4 col-sm-6 ptop">
                         <div class="about-author">
                             <figure class="author-thumb3">
-                                <img src="/img/portfolio/MagicBall8.png" alt="MagicBall8" class="centrado logochico2">
+                                <img src="/img/portfolio/XXXXXXXXXXXXXXX.jpg" alt="BestPizzas" class="centrado logochico2">
                             </figure>
                         </div>
                     </div>
-                    <div class="col-xs-12 col-lg-offset-1 col-lg-4 col-sm-offset-1 col-sm-5 ptop Cajaico">
+                    <div class="col-xs-12 col-lg-offset-1 col-lg-4 col-sm-offset-1 col-sm-5 ptop cajaico">
+                        <div class="contact-block">
+                            <div>
+                                <div class="media-left cajacat">
+                                    <i class="tf-ion-ios-world"></i>
+                                </div>
+                                <div class="media-body maya cajainfo">
+                                    <h4>See it Working:</h4>
+                                    <a href='XXXXXXXXXXXXXXX' target="_blank">XXXXXXXXXXXXXXX</a>
+                                </div>
+                            </div>
+                        </div>
                         <div class="contact-block">
                             <div>
                                 <div class="media-left cajacat">
@@ -77,7 +88,7 @@
                                 </div>
                                 <div class="media-body cajainfo">
                                     <h4>Category</h4>
-                                    <p><iconify-icon icon="simple-icons:python" class='iconosproyectos'></iconify-icon></p>
+                                    <p><iconify-icon icon="akar-icons:html-fill" class='iconosproyectos'></iconify-icon>&<iconify-icon icon="akar-icons:css-fill" class='iconosproyectos'></iconify-icon> <iconify-icon icon="ri:javascript-fill" class='iconosproyectos'></iconify-icon> <iconify-icon icon="fontisto:sass" class='iconosproyectos'></iconify-icon></p>
                                 </div>
                             </div>
                         </div>
@@ -88,7 +99,7 @@
                                 </div>
                                 <div class="media-body github cajainfo">
                                     <h4>The Code:</h4>
-                                    <a href='https://github.com/DavidAdrian8ag/Projects/blob/main/Python/Magic%20Ball%208.py'
+                                    <a href='XXXXXXXXXXXXXXX'
                                         target="_blank">Here <i class='tf-ion-social-github'></i></a>
                                 </div>
                             </div>
@@ -96,8 +107,8 @@
                     </div>
                 </div>
                 <div class="container col-xl-2 col-sm-offset-1 col-sm-10 centrado textmedq">
-                    <h1 class="ptop"><b>Magic Ball 8</b></h1>
-                    <p>Ask the magic ball to see your destinty.</p>
+                    <h1 class="ptop"><b>XXXXXXXXXXXXXXX</b></h1>
+                    <p>XXXXXXXXXXXXXXX</p>
                 </div>
             </div>
         </div>
@@ -105,11 +116,11 @@
     <footer class="pie page-nav clear">
         <div class="container ">
             <div class="flex flex-middle space-between ">
-                <span class="prev-page "><a href="meeti.html" class="link flechas">&larr; Prev Page</a></span>
+                <span class="prev-page "><a href="calculator.html" class="link flechas">&larr; Prev Page</a></span>
                 <span class="copyright">
                     <h4 class="maya">David Adrián Ochoa &#174&#169 2023</h4>
                 </span>
-                <span class="next-page"><a href="podcast.html" class="link flechas">Next Page &rarr;</a></span>
+                <span class="next-page"><a href="../portfolio.html" class="link flechas">Next Page &rarr;</a></span>
             </div>
         </div>
     </footer>
