--- a/Projects/podcast.html
+++ b/Projects/podcast.html
@@ -1,93 +1,137 @@
 <!DOCTYPE html>
-<html class='no-js' lang="en">
-	<head>
-		<meta charset="utf-8">
-		<meta http-equiv="X-UA-Compatible" content="IE=edge">
-		<meta name="viewport" content="width=device-width, initial-scale=1">
-		<title>Podcast FM Clone</title>
-		<link rel='stylesheet' type='text/css' href='../bootstrap/css/bootstrap.min.css' >
-		<link rel='stylesheet' type='text/css' href='../css/ionicons.min.css' >
-		<link rel='stylesheet' type='text/css' href='../css/owl.carousel.css' >
-		<link rel='stylesheet' type='text/css' href='../css/owl.theme.css' >
-		<link rel='stylesheet' type='text/css' href='../css/owl.transitions.css' >
-		<link rel='stylesheet' type='text/css' href='../css/style.css' >
-		<link rel='stylesheet' type='text/css' href='../css/color-default.css' >
-		<link rel="icon" href="../img/favicon.png" type="image/x-icon">
-		<link rel="stylesheet" href="https://necolas.github.io/normalize.css/8.0.1/normalize.css">
-        <script src="https://code.iconify.design/iconify-icon/1.0.7/iconify-icon.min.js"></script>
-	</head>
-	<body>
-		<a href='../portfolio.html' class='close-btn' >
-			<span></span>
-			<span></span>
-		</a>
-		<div id='preloader' >
-			<div class='loader' >
-				<img src='img/load.gif' alt='loader' >
-			</div>
-		</div>
-		<div id='wrapper' >
-			<section class='single-work' >
-				<div class='container' >
-					<div class='row' >
-						<div class='col-md-8' >
-							<img src='../img/portfolio/podcast.jpg' alt='podcast' >
-							<h4 class="espacioworktitulo">Podcast FM Clone</h4>
-							<p>This is a main page for the “Podcast FM” clone, with the respective colors and images, all done with HTML, CSS and a touch of SASS to make the site look very professional in a simple and fast way. </p>
-						</div>
-						<div class='col-md-4' >
-							<ul class='work-info' >
-								<li>
-									<h4><i class="ionicons ion-ios-world"></i>See it working:</h4>
-									<a href='https://podcast-main-page-example.netlify.app/' target="_blank" ><p class="seeitworking"><strong>Podcast FM Clone</strong> </p></a>
-								</li>
-								<li>
-									<h4><i class="bi bi-filetype-js"></i>Category</h4>
-									<p><iconify-icon icon="akar-icons:html-fill" class='iconosproyectos'></iconify-icon> <iconify-icon icon="akar-icons:css-fill" class='iconosproyectos'></iconify-icon> <iconify-icon icon="la:sass" class='iconosproyectos'></iconify-icon></p>
-								</li>
-								<li>
-									<h4>The Code:</h4>
-									<a href='https://github.com/DavidAdrian8ag/Projects/tree/main/Podcast%20Clone' target="_blank" >Here <i class='ion-social-github' ></i></a>
-								</li>
-							</ul>
-						</div>
-					</div>
-				</div>
-			</section>
-			<div class='footer bg-lightgray section-block' >
-				<div class='container' >
-					<div class='row' >
-						<div class='col-xs-6 text-left' >
-							<h4>David Adrián Ochoa &#169; &#174; </h4>
-						</div>
-						<div class='col-xs-6 text-center' >
-							<ul class='footer-social' >
-								<li>
-									<a href='https://www.linkedin.com/in/davidadrian8a/' target="_blank" ><i class='ion-social-linkedin' ></i></a>
-								</li>
-								<li>
-									<a href='https://github.com/DavidAdrian8ag' target="_blank" ><i class='ion-social-github' ></i></a>
-								</li>
-								<li>
-									<a href='https://cerosmasunos.com.mx/' target="_blank" ><i class='ion-android-globe' ></i></a>
-								</li>
-								<li>
-									<a href='mailto:krezipedtech@gmail.com'><i class='ion-email' ></i></a>
-								</li>
-							</ul>
-						</div>
-					</div>
-				</div>
-			</div>
-		</div>
-		<script src='../js/jquery.min.js' ></script>
-		<script src='../js/jquery.stellar.min.js' ></script>
-		<script src='../js/modernizr.js' ></script>
-		<script src='../js/owl.carousel.min.js' ></script>
-		<script src='../js/jquery.shuffle.min.js' ></script>
-		<script src='../js/jquery.magnific-popup.min.js' ></script>
-		<script src='../js/validator.min.js' ></script>
-		<script src='../js/smoothscroll.js' ></script>
-		<script src='../js/script.js' ></script>
-	</body>
+<html lang="en">
+<head>
+    <meta charset="utf-8">
+    <title>FM Clone</title>
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="description" content="Personal Landing Page">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=5.0">
+    <link rel="stylesheet"
+        href="https://fonts.googleapis.com/css?family=Libre+Baskerville:400,400i|Open+Sans:400,600,700,800">
+    <link rel="stylesheet" href="../plugins/bootstrap/bootstrap.min.css">
+    <link rel="stylesheet" href="../plugins/animate.css">
+    <link rel="stylesheet" href="../plugins/slick/slick.css">
+    <link rel="stylesheet" href="../plugins/slick/slick-theme.css">
+    <link rel="stylesheet" href="../plugins/themefisher-fonts/css/themefisher-fonts.min.css">
+    <link rel="icon" href="../img/icono.ico" type="image/x-icon">
+    <link rel="stylesheet" href="../css/style.css">
+    <meta property="og:locale" content="es_MX">
+    <meta property="og:type" content="website">
+    <meta property="og:title" content="FM Clone - David Adrián Ochoa">
+    <meta property="og:description" content="FM Clone - Projects.">
+    <meta property="og:url" content="https://pag2personaltests.netlify.app/projects/podcast">
+    <meta property="og:site_name" content="David Adrián Ochoa">
+    <meta property="og:image"
+        content="https://github.com/DavidAdrian8ag/testpagpersonal2/blob/main/img/portfolio/podcast.jpg?raw=true">
+    <meta name="twitter:card" content="summary_large_image">
+    <script src="https://code.iconify.design/iconify-icon/1.0.7/iconify-icon.min.js"></script>
+</head>
+<div class="preloader">
+    <div class="loading-mask"></div>
+    <div class="loading-mask"></div>
+    <div class="loading-mask"></div>
+    <div class="loading-mask"></div>
+    <div class="loading-mask"></div>
+    <div class="loading-mask"></div>
+    <div class="loading-mask"></div>
+    <div class="loading-mask"></div>
+    <div class="loading-mask"></div>
+    <div class="loading-mask"></div>
+</div>
+<body>
+    <header>
+        <div class="site-wrapper">
+            <div class="pt-table">
+                <div class="pt-tablecell page-about relative">
+                    <a href="../portfolio.html" class="page-close"><i class="tf-ion-close"></i></a>
+                    <div class="container">
+                        <div class="row">
+                            <div class="col-xs-12 col-md-offset-1 col-md-10 col-lg-offset-2 col-lg-8 padbb">
+                                <div class="page-title text-center">
+                                    <h2 class="centrado"><span class="primary">FM </span>Clone <span
+                                            class="title-bgproy2 ">this Project</span></h2>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </header>
+    <main class="site-wrapper2">
+        <div class="pt-table">
+            <div class="pt-tablecell page-about relative">
+                <div class="container">
+                    <div class="col-xs-12 col-lg-offset-2 col-lg-4 col-sm-6 ptop">
+                        <div class="about-author">
+                            <figure class="author-thumb3">
+                                <img src="/img/portfolio/podcast.jpg" alt="FMClone" class="centrado logochico2">
+                            </figure>
+                        </div>
+                    </div>
+                    <div class="col-xs-12 col-lg-offset-1 col-lg-4 col-sm-offset-1 col-sm-5 ptop cajaico">
+                        <div class="contact-block">
+                            <div>
+                                <div class="media-left cajacat">
+                                    <i class="tf-ion-ios-world"></i>
+                                </div>
+                                <div class="media-body maya cajainfo">
+                                    <h4>See it Working:</h4>
+                                    <a href='https://podcast-main-page-example.netlify.app/' target="_blank">FM
+                                        Clone</a>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="contact-block">
+                            <div>
+                                <div class="media-left cajacat">
+                                    <i class="tf-ion-ios-box"></i>
+                                </div>
+                                <div class="media-body cajainfo">
+                                    <h4>Category</h4>
+                                    <p><iconify-icon icon="akar-icons:html-fill" class='iconosproyectos'></iconify-icon>&<iconify-icon icon="akar-icons:css-fill" class='iconosproyectos'></iconify-icon> <iconify-icon icon="fontisto:sass" class='iconosproyectos'></iconify-icon></p>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="contact-block">
+                            <div>
+                                <div class="media-left cajacat">
+                                    <i class="tf-ion-social-github"></i>
+                                </div>
+                                <div class="media-body github cajainfo">
+                                    <h4>The Code:</h4>
+                                    <a href='https://github.com/DavidAdrian8ag/Projects/tree/main/Podcast%20Clone'
+                                        target="_blank">Here <i class='tf-ion-social-github'></i></a>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="container col-xl-2 col-sm-offset-1 col-sm-10 centrado textmedq">
+                    <h1 class="ptop"><b>FM Clone</b></h1>
+                    <p>This is a main page for the “Podcast FM” clone, with the respective colors and images, all done
+                        with HTML, CSS and a touch of SASS to make the site look very professional in a simple and fast
+                        way.</p>
+                </div>
+            </div>
+        </div>
+    </main>
+    <footer class="pie page-nav clear">
+        <div class="container ">
+            <div class="flex flex-middle space-between ">
+                <span class="prev-page "><a href="mb8.html" class="link flechas">&larr; Prev Page</a></span>
+                <span class="copyright">
+                    <h4 class="maya">David Adrián Ochoa &#174&#169 2023</h4>
+                </span>
+                <span class="next-page"><a href="vscodetheme.html" class="link flechas">Next Page &rarr;</a></span>
+            </div>
+        </div>
+    </footer>
+    <script src="../plugins/jquery-2.2.4.min.js"></script>
+    <script src="../plugins/bootstrap/bootstrap.min.js"></script>
+    <script src="../plugins/jquery.nicescroll.min.js"></script>
+    <script src="../plugins/isotope/isotope.pkgd.min.js"></script>
+    <script src="../plugins/slick/slick.min.js"></script>
+    <script src="../js/script.js"></script>
+</body>
 </html>
