--- a/baseproyectospy.html
+++ b/baseproyectospy.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="utf-8">
-    <title>Magic Ball 8</title>
+    <title>David Adrián Ochoa</title>
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="description" content="Personal Landing Page">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=5.0">
@@ -17,14 +17,13 @@
     <link rel="stylesheet" href="../css/style.css">
     <meta property="og:locale" content="es_MX">
     <meta property="og:type" content="website">
-    <meta property="og:title" content="Magic Ball 8 - David Adrián Ochoa">
-    <meta property="og:description" content="Magic Ball 8 - Projects.">
-    <meta property="og:url" content="https://pag2personaltests.netlify.app/projects/mb8">
+    <meta property="og:title" content="Home - David Adrián Ochoa">
+    <meta property="og:description" content="Personal - Landing Page.">
+    <meta property="og:url" content="https://pag2personaltests.netlify.app/">
     <meta property="og:site_name" content="David Adrián Ochoa">
     <meta property="og:image"
-        content="https://github.com/DavidAdrian8ag/testpagpersonal2/blob/main/img/portfolio/MagicBall8.png?raw=true">
+        content="https://github.com/DavidAdrian8ag/testpagpersonal2/blob/main/img/favicon.png?raw=true">
     <meta name="twitter:card" content="summary_large_image">
-    <script src="https://code.iconify.design/iconify-icon/1.0.7/iconify-icon.min.js"></script>
 </head>
 <div class="preloader">
     <div class="loading-mask"></div>
@@ -48,8 +47,8 @@
                         <div class="row">
                             <div class="col-xs-12 col-md-offset-1 col-md-10 col-lg-offset-2 col-lg-8 padbb">
                                 <div class="page-title text-center">
-                                    <h2 class="centrado"><span class="primary">Magic</span>Ball 8 <span
-                                            class="title-bgproy2">this Project</span></h2>
+                                    <h2 class="centrado">XXXXXX <span class="primary">XXXXXX</span> <span
+                                        class="title-bg title-bgproy1 title-bgproy2">this Project</span></h2>  <!--= Ojo con el background -->
                                 </div>
                             </div>
                         </div>
@@ -64,40 +63,39 @@
                 <div class="container">
                     <div class="col-xs-12 col-lg-offset-2 col-lg-4 col-sm-6 ptop">
                         <div class="about-author">
-                            <figure class="author-thumb3">
-                                <img src="/img/portfolio/MagicBall8.png" alt="MagicBall8" class="centrado logochico2">
+                            <figure class="author-thumb">
+                                <img src="/img/portfolio/XXXXXX.jpg" alt="XXXXXX" class="centrado logochico2">
                             </figure>
                         </div>
                     </div>
-                    <div class="col-xs-12 col-lg-offset-1 col-lg-4 col-sm-offset-1 col-sm-5 ptop Cajaico">
+                    <div class="col-xs-12 col-lg-offset-1 col-lg-4 col-sm-offset-1 col-sm-5 ptop ">
                         <div class="contact-block">
-                            <div>
-                                <div class="media-left cajacat">
+                            <div class="media">
+                                <div class="media-left">
                                     <i class="tf-ion-ios-box"></i>
                                 </div>
-                                <div class="media-body cajainfo">
+                                <div class="media-body">
                                     <h4>Category</h4>
-                                    <p><iconify-icon icon="simple-icons:python" class='iconosproyectos'></iconify-icon></p>
+                                    <p><i class='tf-ion-social-python iconosproyectos'></i></a></p>
                                 </div>
                             </div>
                         </div>
                         <div class="contact-block">
-                            <div>
-                                <div class="media-left cajacat">
+                            <div class="media">
+                                <div class="media-left">
                                     <i class="tf-ion-social-github"></i>
                                 </div>
-                                <div class="media-body github cajainfo">
+                                <div class="media-body github">
                                     <h4>The Code:</h4>
-                                    <a href='https://github.com/DavidAdrian8ag/Projects/blob/main/Python/Magic%20Ball%208.py'
-                                        target="_blank">Here <i class='tf-ion-social-github'></i></a>
+                                    <a href='XXXXXX' target="_blank">Here <i class='tf-ion-social-github'></i></a>
                                 </div>
                             </div>
                         </div>
                     </div>
                 </div>
-                <div class="container col-xl-2 col-sm-offset-1 col-sm-10 centrado textmedq">
-                    <h1 class="ptop"><b>Magic Ball 8</b></h1>
-                    <p>Ask the magic ball to see your destinty.</p>
+                <div class="container col-lg-offset-3 col-lg-7 col-sm-offset-1 col-sm-10 centrado">
+                    <h1 class="ptop"><b>XXXXXXXXXXXX</b></h1>
+                    <p>XXXXXXXXXXXXXXXXXXXXXXXXXXXXXX</p>
                 </div>
             </div>
         </div>
@@ -105,11 +103,11 @@
     <footer class="pie page-nav clear">
         <div class="container ">
             <div class="flex flex-middle space-between ">
-                <span class="prev-page "><a href="meeti.html" class="link flechas">&larr; Prev Page</a></span>
+                <span class="prev-page "><a href="portfolio.html" class="link flechas">&larr; Prev Page</a></span>
                 <span class="copyright">
                     <h4 class="maya">David Adrián Ochoa &#174&#169 2023</h4>
                 </span>
-                <span class="next-page"><a href="podcast.html" class="link flechas">Next Page &rarr;</a></span>
+                <span class="next-page"><a href="index.html" class="link flechas">Next Page &rarr;</a></span>
             </div>
         </div>
     </footer>
