--- a/portfolio.html
+++ b/portfolio.html
@@ -274,6 +274,16 @@
                                 </figcaption>
                             </figure>
                         </div>
+                        <div class="col-xs-12 col-sm-6 col-md-4 htmlcss  javascript">
+                            <figure class="works-item">
+                                <img src="img/portfolio/landing.png" alt="Rent a Car">
+                                <div class="overlay"></div>
+                                <figcaption class="works-inner">
+                                    <h4>Landing Page</h4>
+                                    <a href="./Projects/landing.html"><i class="tf-ion-ios-search"></i> Check it out</a>
+                                </figcaption>
+                            </figure>
+                        </div>
                     </div>
                     <div class="about-info text-center cierrechirris">
                         <a href="./"><i class="tf-ion-close centrado maya"></i></a>
