--- a/portfolio.html
+++ b/portfolio.html
@@ -266,7 +266,7 @@
                         </div>
                         <div class="col-xs-12 col-sm-6 col-md-4 htmlcss  javascript">
                             <figure class="works-item">
-                                <img src="img/portfolio/pizza.jpg" alt="Rent a Car">
+                                <img src="img/portfolio/pizza.jpg" alt="Best Pizzas">
                                 <div class="overlay"></div>
                                 <figcaption class="works-inner">
                                     <h4>Best Pizzas</h4>
@@ -276,7 +276,7 @@
                         </div>
                         <div class="col-xs-12 col-sm-6 col-md-4 htmlcss  javascript">
                             <figure class="works-item">
-                                <img src="img/portfolio/landing.png" alt="Rent a Car">
+                                <img src="img/portfolio/landing.png" alt="Landing Page">
                                 <div class="overlay"></div>
                                 <figcaption class="works-inner">
                                     <h4>Landing Page</h4>
