--- a/services.html
+++ b/services.html
@@ -24,6 +24,7 @@
     <meta property="og:image"
         content="https://github.com/DavidAdrian8ag/testpagpersonal2/blob/main/img/favicon.png?raw=true">
     <meta name="twitter:card" content="summary_large_image">
+    <script src="https://code.iconify.design/iconify-icon/1.0.7/iconify-icon.min.js"></script>
 </head>
 <div class="preloader">
     <div class="loading-mask"></div>
@@ -83,10 +84,10 @@
                                     </svg>
                                     <div class="content">
                                         <div class="icon">
-                                            <i class="et-line icon-lightbulb"></i>
+                                            <iconify-icon icon="mdi:web-check" class="maya"></iconify-icon>
                                         </div>
                                         <h4>Web <br> Design</h4>
-                                        <p>I can help you to create <br> web static and dynamic <br> web pages</p>
+                                        <p class="white">I can help you to create <br> web static and dynamic <br> web pages</p>
                                     </div>
                                 </div>
                                 <div class="service-hex">
@@ -103,10 +104,10 @@
                                     </svg>
                                     <div class="content">
                                         <div class="icon">
-                                            <i class="et-line icon-mobile"></i>
+                                            <iconify-icon icon="carbon:script" class="maya"></iconify-icon>
                                         </div>
                                         <h4>Scripts</h4>
-                                        <p>If you require a script <br> to ease your job, I can help.</p>
+                                        <p class="white">If you require a script <br> to ease your job, I can help.</p>
                                     </div>
                                 </div>
                                 <div class="service-hex">
@@ -123,10 +124,10 @@
                                     </svg>
                                     <div class="content">
                                         <div class="icon">
-                                            <i class="et-line icon-profile-male"></i>
+                                            <iconify-icon icon="basil:adobe-photoshop-outline" class="maya"></iconify-icon>
                                         </div>
                                         <h4>Image <br> Edition</h4>
-                                        <p>I can help you out with <br> banners, adds, logos <br> or whatever you need.
+                                        <p class="white">I can help you out with <br> banners, adds, logos <br> or whatever you need.
                                         </p>
                                     </div>
                                 </div>
@@ -144,10 +145,10 @@
                                     </svg>
                                     <div class="content">
                                         <div class="icon">
-                                            <i class="et-line icon-heart"></i>
+                                            <iconify-icon icon="streamline:customer-support-1" class="maya"></iconify-icon>
                                         </div>
                                         <h4>Residential <br> IT Support</h4>
-                                        <p>If you need to upgrade, <br> format or repair your <br> computer.</p>
+                                        <p class="white">If you need to upgrade, <br> format or repair your <br> computer.</p>
                                     </div>
                                 </div>
                                 <div class="service-hex">
@@ -164,10 +165,10 @@
                                     </svg>
                                     <div class="content">
                                         <div class="icon">
-                                            <i class="et-line icon-hotairballoon"></i>
+                                            <iconify-icon icon="basil:adobe-premiere-outline" class="maya"></iconify-icon>
                                         </div>
                                         <h4>Video<br> Edition</h4>
-                                        <p>If you need to edit your <br> videos, put some effects,<br> etc.</p>
+                                        <p  class="white">If you need to edit your <br> videos, put some effects,<br> etc.</p>
                                     </div>
                                 </div>
                             </div>
@@ -188,10 +189,10 @@
                                 </svg>
                                 <div class="content">
                                     <div class="icon">
-                                        <i class="et-line icon-"></i>
+                                        <iconify-icon icon="mdi:account-network" class="maya"></iconify-icon>
                                     </div>
                                     <h4>Social <br> networks</h4>
-                                    <p>I can make your brand <br>to stand out by <br>creating content.</p>
+                                    <p  class="white">I can make your brand <br>to stand out by <br>creating content.</p>
                                 </div>
                             </div>
                             <div class="service-hex">
@@ -207,10 +208,10 @@
                                 </svg>
                                 <div class="content">
                                     <div class="icon">
-                                        <i class="et-line icon-hotairballoon"></i>
+                                        <iconify-icon icon="tabler:pig-money" class="maya"></iconify-icon>
                                     </div>
                                     <h4>Budget <br> Optimization</h4>
-                                    <p>I Can help you to <br>reduce cost and to be <br> more efficient.</p>
+                                    <p  class="white">I Can help you to <br>reduce cost and to be <br> more efficient.</p>
                                 </div>
                             </div>
                             <div class="service-hex">
@@ -226,10 +227,10 @@
                                 </svg>
                                 <div class="content">
                                     <div class="icon">
-                                        <i class="et-line icon-hotairballoon"></i>
+                                        <iconify-icon icon="carbon:tree-view" class="maya"></iconify-icon>
                                     </div>
                                     <h4>Solutions</h4>
-                                    <p>Every issue has a <br>lot of solutions.</p>
+                                    <p  class="white">Every issue has a <br>lot of solutions.</p>
                                 </div>
                             </div>
                             <div class="service-hex">
@@ -245,10 +246,10 @@
                                 </svg>
                                 <div class="content">
                                     <div class="icon">
-                                        <i class="et-line icon-hotairballoon"></i>
+                                        <iconify-icon icon="game-icons:sun-priest" class="maya"></iconify-icon>
                                     </div>
                                     <h4>Creativity</h4>
-                                    <p>I can help you to grow.</p>
+                                    <p class="white">I can help you to grow.</p>
                                 </div>
                             </div>
                             <div class="service-hex">
@@ -264,10 +265,10 @@
                                 </svg>
                                 <div class="content">
                                     <div class="icon">
-                                        <i class="et-line icon-hotairballoon"></i>
+                                        <iconify-icon icon="icon-park-solid:analysis" class="maya"></iconify-icon>
                                     </div>
-                                    <h4>Analysis</h4>
-                                    <p>If you have any issue,<br> I can help you out </p>
+                                    <h4 class="servblack">Analysis</h4>
+                                    <p class="white">If you have any issue,<br> I can help you out </p>
                                 </div>
                             </div>
                         </div>
