--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
                         <div class="row ">
                             <div class="col-lg-offset-1 col-lg-10">
                                 <div class="page-title home text-center centrado yellow">
-                                    <img src="img/favicon.png" alt="logo" class="centrado logochico">
+                                    <img src="img/favicon.png" alt="logo" class="centrado logochico tamanologo">
                                     <p class="text-center centrado">I am a passionate programmer at heart, I am a
                                         telecom professional looking to pivot
                                         into the world of development. Although I am new to the field, my love for
@@ -263,7 +263,7 @@
             <div class="flex flex-middle space-between ">
                 <span class="prev-page "><a href="#.html" ></a></span>
                 <span class="copyright">
-                    <h4 class="maya nombrepie">David Adrián Ochoa &#174&#169 2023</h4>
+                    <h4 class="maya nombrepie">David Adrián Ochoa &#174&#169 2024</h4>
                 </span>
                 <span class="next-page"><a href="#.html" ></i></a></span>
             </div>
