--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
                         <div class="row ">
                             <div class="col-lg-offset-1 col-lg-10">
                                 <div class="page-title home text-center centrado yellow">
-                                    <img src="img/favicon.png" alt="logo" class="centrado logochico tamanologo">
+                                    <img src="img/favicon.png" alt="logo" class="centrado logochico">
                                     <p class="text-center centrado">I am a passionate programmer at heart, I am a
                                         telecom professional looking to pivot
                                         into the world of development. Although I am new to the field, my love for
